# mcp-tool-marketplace

./: README.md  pyproject.toml  registry.json  requirements.txt
agent/: __init__.py  cli.py  graph.py  mcp_manager.py  registry.py  state.py
scripts/: discover_only.py  test_calculator.py
servers/calculator/: server.py
servers/filesystem/: server.py
servers/weather/: server.py
servers/websearch/: server.py
