[project]
name = "mcp-tool-marketplace"
version = "0.1.0"
description = "Central agent that dynamically discovers and calls MCP servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "duckduckgo-search>=6.0.0",
]

[project.scripts]
mcp-marketplace = "agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
